GLIFT-20760: Migrate agent to use renamed NotifyServerProcessTermination API
cr: https://code.amazon.com/reviews/CR-114811873

--- a/pom.xml
+++ b/pom.xml
@@ -150,8 +150,6 @@
         <sourceDirectory>${project.basedir}/src</sourceDirectory>
         <testSourceDirectory>${project.basedir}/tst</testSourceDirectory>
         <pluginManagement>
-            <!-- NOTE: These plugins will be removed from future versions of the super POM -->
-            <!-- They are kept for the moment as they are very unlikely to conflict with lifecycle mappings (MNG-4453) -->
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -190,6 +188,7 @@
                         <descriptorRefs>
                             <descriptorRef>jar-with-dependencies</descriptorRef>
                         </descriptorRefs>
+                        <appendAssemblyId>false</appendAssemblyId>
                     </configuration>
                 </plugin>
             </plugins>
